<resources>
    <string name="app_name">Kotlin Android Template</string>
    <string name="title">This is just a template</string>
    <string name="description">You can compute a factorial using the library-kotlin module. The result will be also shown in a notification using the library-android module.</string>
    <string name="factorial_hint">Insert a number to compute his factorial</string>
    <string name="compute">Compute</string>
    <string name="notification_title">The Result is: %s</string>
    <string name="please_enter_a_number">Please Enter a Number</string>
    <string name="compose_version">In Compose</string>
    <!-- Login Fragment -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign Up</string>

    <!-- Sign Up Fragment -->
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>

    <!-- Home Fragment -->
    <string name="hello_world">Hello World!</string>
    <string name="share">share</string>
    <string name="like">Favorite</string>
    <string name="like_Short">Fav</string>
    <string name="del">Delete</string>

    <!-- Error Messages -->
    <string name="authentication_failed">Authentication failed</string>
    <string name="login_failed">Login failed</string>
    <string name="signup_failed">Sign Up failed</string>
    <string name="email_and_password_cannot_be_empty">Email and password cannot be empty</string>
    <string name="add_item">Add Item</string>

    <string name="prompt_hint">Enter your prompt here</string>
    <string name="generate">Generate</string>
    <string name="status_ready">Ready to generate an image.</string>
    <string name="status_generating">Generating image</string>
    <string name="status_complete">Image generation complete.</string>
    <string name="image_description">Generic image description.</string>

    <string name="image_placeholder">This is an image.</string>
    <string name="status_error">Error generating Image. Please try again.</string>
    <string name="title_feed">Feed</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_likes">Favorites</string>
    <string name="user_name">User Name</string>
    <string name="recently_created">Your posts:</string>
    <string name="likes">Your likes:</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>

</resources>
